--- a/.gitignore
+++ b/.gitignore
@@ -165,3 +165,11 @@ cython_debug/
 # -----------------------------
 # Project Specific
 scraper/output/
+
+# -----------------------------
+# Frontend Development
+# Node.js dependencies
+node_modules/
+
+# Testing and development artifacts
+tmp/
